# FFTSpectrum

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  README.md  SettingsParser.hpp  fft.cpp  fft.h  fftw.cpp  fftw.h  main.cpp  spectrogram.cpp  spectrogram.h
cmake/: FindFFTW.cmake
rundirectory/: README.md  settings.txt  wobbly-sweep.flac
src/: AlignedVector.hpp  Application.cpp  Application.hpp  FFT.cpp  FFT.hpp  Interpolation.cpp  Interpolation.hpp  SettingsParser.cpp  Spectrogram.cpp  Spectrogram.hpp  main.cpp
